demos/02-SD-WAN_aware_L7_traffic_management/yaml/5-client-side-l7-policy-gw.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: payment-egress
  namespace: default
  annotations:
    networking.istio.io/service-type: ClusterIP
spec:
  gatewayClassName: istio
  listeners:
  - name: payment-out
    protocol: HTTP
    port: 8000
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: payment-egress
  namespace: default
spec:
  parentRefs:
  - name: payment-egress
    namespace: default
  hostnames:
    - payment.default.svc.clusterset.local
  rules:
    - matches:
        - method: GET
          path:
            value: "/anything"
      backendRefs:
        - name: payment-secure
          port: 8000
    - backendRefs:
        - name: payment-insecure
          port: 8000
